--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "dotenv": "16.4.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   },
